--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,6 +11,8 @@
 
   <link rel="icon" type="image/png" sizes="16x16" href="/images/gifinder_favicon.png">
   <link href="/styles/style.css" rel="stylesheet" />
+
+  <script defer src="/scripts/script.js"></script>
 
 </head>
 
