:partly_sunny: Implemented localStorage

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -3,6 +3,10 @@
 <%- include('./partials/head.ejs') %>
 
   <div>
+    <a href="/">home</a>
+  </div>
+
+  <div>
     <h2> Alle Ingevulde Enquetes</h2>
 
     <% if (enquetes.length> 0) { %>
