:pencil2: Added some comments

--- a/views/details.ejs
+++ b/views/details.ejs
@@ -1,4 +1,6 @@
-<!-- Ingevulde enquete - details (alles) -->
+<!-- Completed surveys - details (all) -->
+
+<!-- only WAFS is complete for now (h4 added) -->
 
 <%- include('./partials/head.ejs') %>
 
@@ -24,15 +26,23 @@
     <p>
       <%= enquete.WAFSweken %>
     </p>
+
+    <h4>WAFS moeilijk</h4>
     <p>
       <%= enquete.WAFSmoelijk %>
     </p>
+
+    <h4>WAFS uitleg</h4>
     <p>
       <%= enquete.WAFSuitleg %>
     </p>
+
+    <h4>WAFS snappen</h4>
     <p>
       <%= enquete.WAFSsnappen %>
     </p>
+
+    <h4>WAFS cijfer</h4>
     <p>
       <%= enquete.WAFScijfer %>
     </p>
