--- a/views/end.ejs
+++ b/views/end.ejs
@@ -1,3 +1,7 @@
+<!-- End screen after completing survey -->
+
+<!-- Not finished yet -->
+
 <%- include('./partials/head.ejs') %>
 
   <h1>MINOR</h1>
