--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,4 +1,4 @@
-<!-- Alle ingevulde enquetes - alleen naam & studentnummer -->
+<!-- Completed surveys - just name & studentnumber -->
 
 <%- include('./partials/head.ejs') %>
 
