:pencil2: Changed schema

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,9 @@
 <header>
 
-  <img src="images/wdd_logo.png" alt="Web Design and Development logo">
-  <h2>WDD</h2>
+  <svg width="55" height="51" viewBox="0 0 55 51" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M0 0H55L27.233 50.0822V34.4417L41.9175 8.00971H12.949L27.233 34.4417V50.0822L0 0Z" fill="black" />
+  </svg>
 
-  <span>voortgang</span>
+  <h1>WDD</h1>
 
 </header>
