--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,6 +1,8 @@
 <%- include('./partials/head.ejs') %>
 
-  <h1>404</h1>
-  <h2>That didn't go as planned :(</h2>
+  <%- include('./partials/header.ejs') %>
 
-  <%- include('./partials/footer.ejs') %>
+    <h1>404</h1>
+    <h2>That didn't go as planned :(</h2>
+
+    <%- include('./partials/footer.ejs') %>
