--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,28 @@
-<!-- End screen after completing survey -->
 <%- include('./partials/head.ejs') %>
 
   <section class="carousel">
 
     <ol>
 
-      <li class="end">
+      <li id="index">
         <%- include('./partials/header.ejs') %>
 
           <section class='content'>
-            <span class="endVoortgang"></span>
 
             <section>
-              <h1>Verzonden</h1>
-              <h2>Bedankt voor het invullen van de enquête!</h2>
+              <h1>Web Design & Development</h1>
+              <h2>Enquête</h2>
+
+              <a href="/enquete#login">
+                <input type="button" value="Start">
+              </a>
             </section>
           </section>
 
       </li>
+
     </ol>
+
   </section>
 
   <%- include('./partials/footer.ejs') %>
