--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,15 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>
-    <%= title %>
+    Minor WDD Enquête | <%- title %>
   </title>
 
-  <link rel="icon" type="image/png" sizes="16x16" href="/images/gifinder_favicon.png">
+  <!-- <link rel="icon" type="image/png" sizes="16x16" href="/images/gifinder_favicon.png"> -->
   <link href="/styles/style.css" rel="stylesheet" />
 
-  <script defer src="/scripts/script.js"></script>
+  <script defer src="scripts/script.js"></script>
 
 </head>
 
-<body>
-  <main>
+<main>
+
+  <body>
