--- a/views/enquete.ejs
+++ b/views/enquete.ejs
@@ -5,6 +5,23 @@
 
       <ol>
 
+        <li id="index">
+          <%- include('./partials/header.ejs') %>
+
+            <section class='content'>
+
+              <section>
+                <h1>Web Design & Development</h1>
+                <h2>Enquête</h2>
+
+                <a href="#login">
+                  <input type="button" value="Start">
+                </a>
+              </section>
+            </section>
+
+        </li>
+
         <li id="login">
           <%- include('./partials/header.ejs') %>
 
