--- a/views/partials/bt-part.ejs
+++ b/views/partials/bt-part.ejs
@@ -2,25 +2,24 @@
 
 <section>
 
-  <h1>Vak 4</h1>
-  <h2>Browser Technologies</h2>
+  <h1>Browser Technologies</h1>
 
   <label id='BTdocentKey' for='BTdocent'>Wie was je docent?</label>
   <input type='text' id='BTdocent' name='BTdocent' required>
 
 
   <h3>Tijdens welke weken heb je het vak gevolgd?</h3>
-  <label id='BTweken1-4Key' for='BTweken1-4'>Week 1 - 4</label>
-  <input type='radio' id='BTweken1-4' name='BTweken' value='1-4' checked>
+  <label id='BTweken1-4Key' for='BTweken1-4'>
+    <input type='radio' id='BTweken1-4' name='BTweken' value='1-4' checked>
+    Week 1 - 4</label>
 
+  <label id='BTweken5-9Key' for='BTweken4-9'>
+    <input type='radio' id='BTweken5-9' name='BTweken' value='5-9'>
+    Week 5 - 9</label>
 
-  <label id='BTweken5-9Key' for='BTweken4-9'>Week 5 - 9</label>
-  <input type='radio' id='BTweken5-9' name='BTweken' value='5-9'>
-
-
-  <label id='BTweken10-14Key' for='BTweken10-14'>Week 10 - 14</label>
-  <input type='radio' id='BTweken10-14' name='BTweken' value='10-14'>
-
+  <label id='BTweken10-14Key' for='BTweken10-14'>
+    <input type='radio' id='BTweken10-14' name='BTweken' value='10-14'>
+    Week 10 - 14</label>
 
   <label id='BTmoeilijkKey' for='BTmoeilijk'>Hoe vond je het vak qua moeilijkheidsgraad?</label>
   <input type='text' id='BTmoeilijk' name='BTmoeilijk' required>
