--- a/views/partials/cssttr-part.ejs
+++ b/views/partials/cssttr-part.ejs
@@ -2,25 +2,24 @@
 
 <section>
 
-  <h1>Vak 2</h1>
-  <h2>CSS to the Rescue</h2>
+  <h1>CSS to the Rescue</h1>
 
   <label id='CSSTTRdocentKey' for='CSSTTRdocent'>Wie was je docent?</label>
   <input type='text' id='CSSTTRdocent' name='CSSTTRdocent' required>
 
 
   <h3>Tijdens welke weken heb je het vak gevolgd?</h3>
-  <label id='CSSTTRweken1-4Key' for='CSSTTRweken1-4'>Week 1 - 4</label>
-  <input type='radio' id='CSSTTRweken1-4' name='CSSTTRweken' value='1-4' checked>
+  <label id='CSSTTRweken1-4Key' for='CSSTTRweken1-4'>
+    <input type='radio' id='CSSTTRweken1-4' name='CSSTTRweken' value='1-4' checked>
+    Week 1 - 4</label>
 
+  <label id='CSSTTRweken5-9Key' for='CSSTTRweken4-9'>
+    <input type='radio' id='CSSTTRweken5-9' name='CSSTTRweken' value='5-9'>
+    Week 5 - 9</label>
 
-  <label id='CSSTTRweken5-9Key' for='CSSTTRweken4-9'>Week 5 - 9</label>
-  <input type='radio' id='CSSTTRweken5-9' name='CSSTTRweken' value='5-9'>
-
-
-  <label id='CSSTTRweken10-14Key' for='CSSTTRweken10-14'>Week 10 - 14</label>
-  <input type='radio' id='CSSTTRweken10-14' name='CSSTTRweken' value='10-14'>
-
+  <label id='CSSTTRweken10-14Key' for='CSSTTRweken10-14'>
+    <input type='radio' id='CSSTTRweken10-14' name='CSSTTRweken' value='10-14'>
+    Week 10 - 14</label>
 
   <label id='CSSTTRmoeilijkKey' for='CSSTTRmoeilijk'>Hoe vond je het vak qua moeilijkheidsgraad?</label>
   <input type='text' id='CSSTTRmoeilijk' name='CSSTTRmoeilijk' required>
