--- a/views/partials/hcd-part.ejs
+++ b/views/partials/hcd-part.ejs
@@ -2,25 +2,24 @@
 
 <section>
 
-  <h1>Vak 6</h1>
-  <h2>Human Centred Design</h2>
+  <h1>Human Centred Design</h1>
 
   <label id='HCDdocentKey' for='HCDdocent'>Wie was je docent?</label>
   <input type='text' id='HCDdocent' name='HCDdocent' required>
 
 
   <h3>Tijdens welke weken heb je het vak gevolgd?</h3>
-  <label id='HCDweken1-4Key' for='HCDweken1-4'>Week 1 - 4</label>
-  <input type='radio' id='HCDweken1-4' name='HCDweken' value='1-4' checked>
+  <label id='HCDweken1-4Key' for='HCDweken1-4'>
+    <input type='radio' id='HCDweken1-4' name='HCDweken' value='1-4' checked>
+    Week 1 - 4</label>
 
+  <label id='HCDweken5-9Key' for='HCDweken4-9'>
+    <input type='radio' id='HCDweken5-9' name='HCDweken' value='5-9'>
+    Week 5 - 9</label>
 
-  <label id='HCDweken5-9Key' for='HCDweken4-9'>Week 5 - 9</label>
-  <input type='radio' id='HCDweken5-9' name='HCDweken' value='5-9'>
-
-
-  <label id='HCDweken10-14Key' for='HCDweken10-14'>Week 10 - 14</label>
-  <input type='radio' id='HCDweken10-14' name='HCDweken' value='10-14'>
-
+  <label id='HCDweken10-14Key' for='HCDweken10-14'>
+    <input type='radio' id='HCDweken10-14' name='HCDweken' value='10-14'>
+    Week 10 - 14</label>
 
   <label id='HCDmoeilijkKey' for='HCDmoeilijk'>Hoe vond je het vak qua moeilijkheidsgraad?</label>
   <input type='text' id='HCDmoeilijk' name='HCDmoeilijk' required>
