--- a/views/partials/pwa-part.ejs
+++ b/views/partials/pwa-part.ejs
@@ -2,25 +2,24 @@
 
 <section>
 
-  <h1>Vak 3</h1>
-  <h2>Progressive Web App</h2>
+  <h1>Progressive Web App</h1>
 
   <label id='PWAdocentKey' for='PWAdocent'>Wie was je docent?</label>
   <input type='text' id='PWAdocent' name='PWAdocent' required>
 
 
   <h3>Tijdens welke weken heb je het vak gevolgd?</h3>
-  <label id='PWAweken1-4Key' for='PWAweken1-4'>Week 1 - 4</label>
-  <input type='radio' id='PWAweken1-4' name='PWAweken' value='1-4' checked>
+  <label id='PWAweken1-4Key' for='PWAweken1-4'>
+    <input type='radio' id='PWAweken1-4' name='PWAweken' value='1-4' checked>
+    Week 1 - 4</label>
 
+  <label id='PWAweken5-9Key' for='PWAweken4-9'>
+    <input type='radio' id='PWAweken5-9' name='PWAweken' value='5-9'>
+    Week 5 - 9</label>
 
-  <label id='PWAweken5-9Key' for='PWAweken4-9'>Week 5 - 9</label>
-  <input type='radio' id='PWAweken5-9' name='PWAweken' value='5-9'>
-
-
-  <label id='PWAweken10-14Key' for='PWAweken10-14'>Week 10 - 14</label>
-  <input type='radio' id='PWAweken10-14' name='PWAweken' value='10-14'>
-
+  <label id='PWAweken10-14Key' for='PWAweken10-14'>
+    <input type='radio' id='PWAweken10-14' name='PWAweken' value='10-14'>
+    Week 10 - 14</label>
 
   <label id='PWAmoeilijkKey' for='PWAmoeilijk'>Hoe vond je het vak qua moeilijkheidsgraad?</label>
   <input type='text' id='PWAmoeilijk' name='PWAmoeilijk' required>
