--- a/views/partials/rtw-part.ejs
+++ b/views/partials/rtw-part.ejs
@@ -2,24 +2,24 @@
 
 <section>
 
-  <h1>Vak 5</h1>
-  <h2>Real-Time Web</h2>
+  <h1>Real-Time Web</h1>
 
   <label id='RTWdocentKey' for='RTWdocent'>Wie was je docent?</label>
   <input type='text' id='RTWdocent' name='RTWdocent' required>
 
 
   <h3>Tijdens welke weken heb je het vak gevolgd?</h3>
-  <label id='RTWweken1-4Key' for='RTWweken1-4'>Week 1 - 4</label>
-  <input type='radio' id='RTWweken1-4' name='RTWweken' value='1-4' checked>
+  <label id='RTWweken1-4Key' for='RTWweken1-4'>
+    <input type='radio' id='RTWweken1-4' name='RTWweken' value='1-4' checked>
+    Week 1 - 4</label>
 
+  <label id='RTWweken5-9Key' for='RTWweken4-9'>
+    <input type='radio' id='RTWweken5-9' name='RTWweken' value='5-9'>
+    Week 5 - 9</label>
 
-  <label id='RTWweken5-9Key' for='RTWweken4-9'>Week 5 - 9</label>
-  <input type='radio' id='RTWweken5-9' name='RTWweken' value='5-9'>
-
-  <label id='RTWweken10-14Key' for='RTWweken10-14'>Week 10 - 14</label>
-  <input type='radio' id='RTWweken10-14' name='RTWweken' value='10-14'>
-
+  <label id='RTWweken10-14Key' for='RTWweken10-14'>
+    <input type='radio' id='RTWweken10-14' name='RTWweken' value='10-14'>
+    Week 10 - 14</label>
 
   <label id='RTWmoeilijkKey' for='RTWmoeilijk'>Hoe vond je het vak qua moeilijkheidsgraad?</label>
   <input type='text' id='RTWmoeilijk' name='RTWmoeilijk' required>
