--- a/views/partials/wafs-part.ejs
+++ b/views/partials/wafs-part.ejs
@@ -2,25 +2,24 @@
 
 <section>
 
-  <h1>Vak 1</h1>
-  <h2>Web App From Scratch</h2>
+  <h1>Web App From Scratch</h1>
 
   <label id='WAFSdocentKey' for='WAFSdocent'>Wie was je docent?</label>
   <input type='text' id='WAFSdocent' name='WAFSdocent' required>
 
 
   <h3>Tijdens welke weken heb je het vak gevolgd?</h3>
-  <label id='WAFSweken1-4Key' for='WAFSweken1-4'>Week 1 - 4</label>
-  <input type='radio' id='WAFSweken1-4' name='WAFSweken' value='1-4' checked>
+  <label id='WAFSweken1-4Key' for='WAFSweken1-4'>
+    <input type='radio' id='WAFSweken1-4' name='WAFSweken' value='1-4' checked>
+    Week 1 - 4</label>
 
+  <label id='WAFSweken5-9Key' for='WAFSweken4-9'>
+    <input type='radio' id='WAFSweken5-9' name='WAFSweken' value='5-9'>
+    Week 5 - 9</label>
 
-  <label id='WAFSweken5-9Key' for='WAFSweken4-9'>Week 5 - 9</label>
-  <input type='radio' id='WAFSweken5-9' name='WAFSweken' value='5-9'>
-
-
-  <label id='WAFSweken10-14Key' for='WAFSweken10-14'>Week 10 - 14</label>
-  <input type='radio' id='WAFSweken10-14' name='WAFSweken' value='10-14'>
-
+  <label id='WAFSweken10-14Key' for='WAFSweken10-14'>
+    <input type='radio' id='WAFSweken10-14' name='WAFSweken' value='10-14'>
+    Week 10 - 14</label>
 
   <label id='WAFSmoeilijkKey' for='WAFSmoeilijk'>Hoe vond je het vak qua moeilijkheidsgraad?</label>
   <input type='text' id='WAFSmoeilijk' name='WAFSmoeilijk' required>
