:recycle: Changed section to fieldset & removed footer

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -5,4 +5,9 @@
     <h1>404</h1>
     <h2>That didn't go as planned :(</h2>
 
-    <%- include('./partials/footer.ejs') %>
+    <!-- <%- include('./partials/footer.ejs') %> -->
+
+    </main>
+    </body>
+
+    </html>
