--- a/views/end.ejs
+++ b/views/end.ejs
@@ -11,14 +11,23 @@
           <section class='content'>
             <span class="endVoortgang"></span>
 
-            <section>
+            <fieldset>
               <h1>Verzonden</h1>
               <h2>Bedankt voor het invullen van de enquête!</h2>
-            </section>
+
+              <a class='endLink' href="https://www.google.com/">
+                <p>Verder gaan met het leven</p>
+              </a>
+            </fieldset>
           </section>
 
       </li>
     </ol>
   </section>
 
-  <%- include('./partials/footer.ejs') %>
+  <!-- <%- include('./partials/footer.ejs') %> -->
+
+  </main>
+  </body>
+
+  </html>
