--- a/views/details.ejs
+++ b/views/details.ejs
@@ -157,4 +157,9 @@
 
     </div>
 
-    <%- include('./partials/footer.ejs') %>
+    <!-- <%- include('./partials/footer.ejs') %> -->
+
+    </main>
+    </body>
+
+    </html>
