--- a/views/results.ejs
+++ b/views/results.ejs
@@ -30,4 +30,9 @@
 
     </div>
 
-    <%- include('./partials/footer.ejs') %>
+    <!-- <%- include('./partials/footer.ejs') %> -->
+
+    </main>
+    </body>
+
+    </html>
